@@ -74,9 +74,6 @@
 				<menuitem action="lower"/>
 			</menu>
 		</menu>
-		<menu action="search">
-			<menuitem action="jump_to_subtitle"/>
-		</menu>
 		<menu action="documents">
 			<menuitem action="save_all"/>
 			<menuitem action="close_all"/>
